force-app/main/default/objects/ContentVersion/fields/Answer__c.field-meta.xml
<CustomField>
    <fullName>Answer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Clarity Form Answer</label>
    <referenceTo>Answer__c</referenceTo>
    <relationshipLabel>Content Versions</relationshipLabel>
    <relationshipName>Content_Versions</relationshipName>
    <type>Lookup</type>
</CustomField>