force-app/main/default/objects/ContentVersion/fields/Answer_UUID__c.field-meta.xml
<CustomField>
    <fullName>Answer_UUID__c</fullName>
    <label>Answer UUID</label>
    <length>35</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>