force-app/main/default/objects/ContentVersion/fields/Clarity_Form_Answer__c.field-meta.xml
<CustomField>
    <fullName>Clarity_Form_Answer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Clarity Form Answer</label>
    <referenceTo>Clarity_Form_Answer__c</referenceTo>
    <relationshipLabel>Content Versions</relationshipLabel>
    <relationshipName>Content_Versions</relationshipName>
    <type>Lookup</type>
</CustomField>